--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,20 @@ html{
     color: var(--white)
 }
 header{
-    padding: 3rem 0;
+    padding-top: 3rem;
+    padding-bottom: .5rem;
     color: var(--black);
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 main{
     color: var(--black);
+}
+h1{
+    font-size: 1.5rem;
+    margin: .5rem auto .5rem 1rem;
 }
 input[type="search"]{
     border-radius: 25px;
@@ -73,6 +78,7 @@ button{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    padding-bottom: .2rem;
     gap: .3rem;
 }
 .header-search span{
@@ -90,13 +96,11 @@ button{
     border-radius: 50%;
 }
 .header-info{
-    padding: .5rem;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
-    gap: .5rem;
 }
 .header-info_description{
     display: flex;
@@ -110,4 +114,31 @@ button{
     align-items: flex-end;
     justify-content: flex-end;
     gap: .3rem;
+}
+.project-container{
+    padding: .5rem;
+    display: flex;
+    flex-direction: column;
+    gap: .2rem;
+}
+.project-item{
+    background-color: rgb(255, 255, 255);
+    padding: .5rem;
+    margin: .5rem;
+    border-left: 4px solid orange;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
+}
+.project-item_title, 
+.project-item_description{
+    padding: 0;
+}
+.project-item_description{
+    text-align: justify;
+}
+.project-item_actions{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: flex-end;
+    cursor: pointer;
 }
