--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ header{
     align-items: center;
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
+aside,
 main{
     color: var(--black);
 }
@@ -200,4 +201,52 @@ button{
 }
 .fa-bullhorn{
     cursor: pointer;
+}
+
+
+@media only screen and (min-width:500px){
+    header,
+    main,
+    aside{
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+}
+
+@media only screen and (min-width:650px){
+    header,
+    main,
+    aside{
+        padding-left: 6rem;
+        padding-right: 6rem;
+    }
+}
+
+@media only screen and (min-width:768px){
+    header,
+    main,
+    aside{
+        padding-left: 0;
+        padding-right: 0;
+    }
+    body{
+        display: grid;
+        grid-template-columns: minmax(150px, 200px) auto minmax(150px, 350px);
+        grid-template-rows: repeat(7, auto);
+    }
+    header{
+        grid-area: 1/2/1/4;
+    }
+    main{
+        grid-area: 2/2/8/2;
+        display: flex;
+        justify-content: space-between;
+    }
+    aside{
+        grid-area: 2/3/8/4;
+    }
+    .dashboard{
+        position: relative;
+        grid-area: 1/1/8/2;
+    }
 }
