--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 :root{
-    --main-color: #277BC0;
+    --main-color: #1992d4;
     --white: #fff;
     --black: #000;
     --subtitle-color: #808080;
@@ -24,13 +24,17 @@ aside,
 main{
     color: var(--black);
 }
+aside{
+    padding: .5rem;
+}
 h1{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin: .5rem auto .5rem 1rem;
 }
 input[type="search"]{
     border-radius: 25px;
     padding: .3rem .7rem .3rem .7rem;
+    width: 50vw;
 }
 button{
     border: none;
@@ -137,6 +141,10 @@ button{
     border-radius: .5rem;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.75);
 }
+.project-item_title{
+    margin-bottom: 0;
+    font-size: 1.2rem;
+}
 .project-item_title, 
 .project-item_description{
     padding: 0;
@@ -171,7 +179,8 @@ button{
     margin-bottom: 0;
 }
 .item-container_description{
-    margin-top: 0;
+    font-size: .75rem;
+    margin-top: .2rem;
 }
 .trending-card{
     background-color: var(--white);
@@ -185,9 +194,10 @@ button{
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    margin-left: 2rem;
+    margin-left:1rem;
     gap: 1rem;
     margin-bottom: .5rem;
+    margin-top: .5rem;
 }
 .trending-description p{
     width: 100%;
@@ -202,8 +212,6 @@ button{
 .fa-bullhorn{
     cursor: pointer;
 }
-
-
 @media only screen and (min-width:500px){
     header,
     main,
@@ -212,7 +220,6 @@ button{
         padding-right: 2rem;
     }
 }
-
 @media only screen and (min-width:650px){
     header,
     main,
@@ -221,7 +228,6 @@ button{
         padding-right: 6rem;
     }
 }
-
 @media only screen and (min-width:768px){
     header,
     main,
@@ -235,7 +241,9 @@ button{
         grid-template-rows: repeat(7, auto);
     }
     header{
+        padding-top: .5rem;
         grid-area: 1/2/1/4;
+        align-items: center;
     }
     main{
         grid-area: 2/2/8/2;
@@ -248,5 +256,41 @@ button{
     .dashboard{
         position: relative;
         grid-area: 1/1/8/2;
+        box-shadow: 1px 0px 5px 0px rgba(0,0,0,0.75);
+    }
+    .header-info{
+        justify-content: center;
+        gap: 1rem;
+        flex-direction: row;
+    }
+    .header-info_description{
+        margin-right: 10rem;
+    }
+    .trending-card{
+        padding: 0;
+        margin: 0;
+        font-size: .7rem;
+    }
+    .trending-image{
+        width: 25px;
+        height: 25px;
+    }
+    .project-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: 48px auto;
+    }
+    .project-container h1{
+        grid-area: 1/1/1/3;
+        padding: 0;
+    }
+}
+@media only screen and (min-width:1200px){
+    .trending-card{
+        font-size: .9rem;
+    }
+    .trending-image{
+        width: 50px;
+        height: 50px;
     }
 }
